# CameraControler

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.build_docker_job  README.md
.github/workflows/: docker-image.yml
camera_controller/: Cargo.toml
camera_controller/src/: build.rs  camera_manager.rs  lib.rs  main.rs  video_streamer.rs
