[package]
name = "camera_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10"
gstreamer = "0.18"
gstreamer-app = "0.18"
log = "0.4.17"
opencv = "0.70"
pretty_env_logger = "0.4.0"
